--- a/article 2.html
+++ b/article 2.html
@@ -15,98 +15,99 @@
         <ul class="navbar">
             <li><a href="articles.html" >Domov</a></li>
             <li><a href="article1.html">Bedminton </a></li>
-            <li><a class="active">StolnÃ½ Tenis </a></li>
+            <li><a class="active">Stolný Tenis </a></li>
             <li><a href="article%203.html">Tenis</a></li>
-            <li style="float:right"><a class="logo">RaketovÃ© Å¡porty KoÅ¡ice</a></li>
+            <li><a href="Referencies.html">Referencie</a></li>
+            <li style="float:right"><a class="logo">Raketové športy Košice</a></li>
         </ul>
 
-    <h1 class="header">StolnÃ½ tenis</h1>
+    <h1 class="header">Stolný tenis</h1>
 
     <img class="image" src="ping.jpg" height="183" alt="Ping pong">
 
-        <p><b>StolnÃ½ tenis</b> alebo hovorovo <b>Ping pong</b> patrÃ­ medzi najrÃ½chlejÅ¡ie Å¡portovÃ© hry na svete, kotrÃ½
-            uÄÃ­ maÅ¥ rÃ½chly odhad hernej situÃ¡cie a jej okamÅ¾itÃ© rieÅ¡enie najvhodnejÅ¡Ã­m hernÃ½m spÃ´sobom.
-            ZaÄiatkom stolnÃ©ho tenisu bol tenis, ktorÃ½ sa jeho nadÅ¡enci snaÅ¾ili poÄas zimnÃ½ch mesiacov preniesÅ¥ do sÃ¡lovÃ©ho prostredia teda na stÃ´l.
-            Od roku 1909 sa stolnÃ½ tenis zaÄal Å¡Ã­riÅ¥ z Anglicka do EurÃ³py.</p>
+        <p><b>Stolný tenis</b> alebo hovorovo <b>Ping pong</b> patrí medzi najrýchlejšie športové hry na svete, kotrý
+            učí mať rýchly odhad hernej situácie a jej okamžité riešenie najvhodnejším herným spôsobom.
+            Začiatkom stolného tenisu bol tenis, ktorý sa jeho nadšenci snažili počas zimných mesiacov preniesť do sálového prostredia teda na stôl.
+            Od roku 1909 sa stolný tenis začal šíriť z Anglicka do Európy.</p>
 
-        <b class="shadowing">Z hÄ¾adiska vÃ½voja techniky stolnÃ½ tenis rozdeÄ¾ujeme na:</b>
+        <b class="shadowing">Z hľadiska vývoja techniky stolný tenis rozdeľujeme na:</b>
 
         <ol>
-            <li>obdobie drevenej rakety => 1884 â 1926</li>
-            <li>obdobie gumenej rakety => 1927 â 1951</li>
-            <li>obdobie Å¡pongiovej rakety => 1952 â 1959</li>
-            <li>obdobie sendviÄovej rakety => 1960 â 1969</li>
-            <li>obdobie ÃºÄinnÃ½ch druhov rakiet => (od roku 1970 aÅ¾ podnes)</li>
+            <li>obdobie drevenej rakety => 1884 – 1926</li>
+            <li>obdobie gumenej rakety => 1927 – 1951</li>
+            <li>obdobie špongiovej rakety => 1952 – 1959</li>
+            <li>obdobie sendvičovej rakety => 1960 – 1969</li>
+            <li>obdobie účinných druhov rakiet => (od roku 1970 až podnes)</li>
         </ol>
 
-    <h4 class="shadowing"> PrincÃ­p hry</h4>
-    <b>StolnÃ½ tenis</b> je druh Å¡portu, pri ktorom je snahou hrÃ¡Äa zahraÅ¥ loptiÄku ponad, prÃ­padne popri sieÅ¥ke na Å¡peciÃ¡lnom stole tak,
-    aby jej vrÃ¡tenie spÃ´sobovalo Å¥aÅ¾kosti sÃºperovi, prÃ­padne aby ju nemohol vrÃ¡tiÅ¥.PodÃ¡va sa s loptiÄkou voÄ¾ne leÅ¾iacou na dlani, ktorÃ¡ musÃ­ byÅ¥ otvorenÃ¡.
-    LoptiÄka musÃ­ byÅ¥ vyhodenÃ¡ z ruky do vÃ½Å¡ky. MusÃ­ sa najskÃ´r dotknÃºÅ¥ plochy rakety podÃ¡vajÃºceho a potom prijÃ­majÃºceho.
-    Ak sa loptiÄka dotkne sieÅ¥ky a preskoÄÃ­ na stranu prijÃ­majÃºceho, podanie sa opakuje. PovinnosÅ¥ou hrÃ¡Äa je podÃ¡vaÅ¥ tak, aby mohla byÅ¥ posÃºdenÃ¡ jeho sprÃ¡vnosÅ¥.
-    Podanie sa menÃ­ po dvoch zahranÃ½ch loptiÄkÃ¡ch.
+    <h4 class="shadowing"> Princíp hry</h4>
+    <b>Stolný tenis</b> je druh športu, pri ktorom je snahou hráča zahrať loptičku ponad, prípadne popri sieťke na špeciálnom stole tak,
+    aby jej vrátenie spôsobovalo ťažkosti súperovi, prípadne aby ju nemohol vrátiť.Podáva sa s loptičkou voľne ležiacou na dlani, ktorá musí byť otvorená.
+    Loptička musí byť vyhodená z ruky do výšky. Musí sa najskôr dotknúť plochy rakety podávajúceho a potom prijímajúceho.
+    Ak sa loptička dotkne sieťky a preskočí na stranu prijímajúceho, podanie sa opakuje. Povinnosťou hráča je podávať tak, aby mohla byť posúdená jeho správnosť.
+    Podanie sa mení po dvoch zahraných loptičkách.
 
-    <h4 class="shadowing">Miesta kde sa dÃ¡ hraÅ¥ v KoÅ¡iciach</h4>
+    <h4 class="shadowing">Miesta kde sa dá hrať v Košiciach</h4>
 
     <table >
-        <caption class="shadowing">Haly v KoÅ¡iciach</caption>
+        <caption class="shadowing">Haly v Košiciach</caption>
         <tr>
-            <th>NÃ¡zov haly</th>
+            <th>Názov haly</th>
             <th>Miesto</th>
         </tr>
         <tr>
-            <td>Å portovÃ© centrum Cassosport</td>
-            <td> AlejovÃ¡ 1632/1</td>
+            <td>Športové centrum Cassosport</td>
+            <td> Alejová 1632/1</td>
         </tr>
 
         <tr>
-            <td>StolnotenisovÃ½ klub LokomotÃ­va</td>
-            <td> ÄermeÄ¾skÃ¡ cesta 1452 </td>
+            <td>Stolnotenisový klub Lokomotíva</td>
+            <td> Čermeľská cesta 1452 </td>
         </tr>
 
         <tr>
             <td>Tenis komplex</td>
-            <td> WuppertÃ¡lska  </td>
+            <td> Wuppertálska  </td>
         </tr>
 
         <tr>
-            <td>TenisovÃ½ klub DRANaM </td>
-            <td> VysokoÅ¡kolskÃ¡ 39  </td>
+            <td>Tenisový klub DRANaM </td>
+            <td> Vysokoškolská 39  </td>
         </tr>
 
         <tr>
             <td>Cassovia Badminton Spot </td>
-            <td> OpatovskÃ¡ cesta 1742  </td>
+            <td> Opatovská cesta 1742  </td>
         </tr>
 
         <tr>
-            <td>Å opa Gallery malba </td>
-            <td> MÃ¤siarska 422  </td>
+            <td>Šopa Gallery malba </td>
+            <td> Mäsiarska 422  </td>
         </tr>
 
         <tr>
-            <td>KSC JUÅ½AN </td>
+            <td>KSC JUŽAN </td>
             <td> Smetanova 522  </td>
         </tr>
 
         <tr>
-            <td>SpoloÄensko â relaxaÄnÃ© centrum </td>
+            <td>Spoločensko – relaxačné centrum </td>
             <td> Ul. Milosrdenstva 462/4  </td>
         </tr>
 
         <tr>
-            <td>VÃ½stavnÃ½ a vÅ¡eÅ¡portovÃ½ areÃ¡l</td>
-            <td> Pri prachÃ¡rni 11  </td>
+            <td>Výstavný a všešportový areál</td>
+            <td> Pri prachárni 11  </td>
         </tr>
 
         <tr>
             <td>RCM </td>
-            <td> StrojÃ¡renskÃ¡ 1061/3  </td>
+            <td> Strojárenská 1061/3  </td>
         </tr>
 
         <tr>
             <td>SPACE::LAB</td>
-            <td>BulharskÃ¡ 557/4  </td>
+            <td>Bulharská 557/4  </td>
         </tr>
 
     </table>
@@ -114,12 +115,12 @@
         <footer>
         <div class="infoother">
             <p class="sizeinfoother">
-                <b>VytvorenÃ©:</b>
+                <b>Vytvorené:</b>
                 27.02.2020
             </p>
             <p>
                 <b>Autor:</b>
-                <i>MolnÃ¡rovÃ¡ Anna</i> <br>
+                <i>Molnárová Anna</i> <br>
                 <b>Kontakt:</b>
                 anna.molnarova@student.tuke.sk
             </p>
