--- a/article 3.html
+++ b/article 3.html
@@ -15,9 +15,10 @@
         <ul class="navbar">
             <li><a href="articles.html" >Domov</a></li>
             <li><a href="article1.html">Bedminton </a></li>
-            <li><a href="article%202.html">StolnÃ½ tenis</a></li>
+            <li><a href="article%202.html">Stolný tenis</a></li>
             <li><a class="active">Tenis </a></li>
-            <li style="float:right"><a class="logo">RaketovÃ© Å¡porty KoÅ¡ice</a></li>
+            <li><a href="Referencies.html">Referencie</a></li>
+            <li style="float:right"><a class="logo">Raketové športy Košice</a></li>
         </ul>
 
     <h1 class="header">Tenis</h1>
@@ -26,75 +27,75 @@
 
     <main >
         <header>
-        <p><b>Tenis</b> je oznaÄovanÃ½ aj ako biely Å¡port, ktorÃ½ vznikol vo FrancÃºzsku ako jeu de paume (v preklade hra rÃºk, resp. hra s rukou/rukami)
-        povaÅ¾ujÃºcou za predchodkyÅu tenisu.LoptiÄka sa odbÃ­jala pÃ´vodne holÃ½mi rukami, neskÃ´r sa uÅ¾ pouÅ¾Ã­vali rukavice a nakoniec palice.
-        Rakety a prvÃ½ kurt vznikol v 16. storoÄÃ­. V roku 1873 si major anglickej armÃ¡dy Walter Clopton Wingfield patentoval hru pod nÃ¡zvom spharistike
-        (odvodenÃ©ho od grÃ©ckeho slova pre hru s loptiÄkami). VedÄ¾ajÅ¡Ã­ nÃ¡zov pre tÃºto hru bol lawn tenis (v preklade trÃ¡vnikovÃ½ tenis).
-        Z Anglicka sa hra rozÅ¡Ã­rila aj do USA, AustrÃ¡lie a neskÃ´r do EurÃ³py.</p>
+        <p><b>Tenis</b> je označovaný aj ako biely šport, ktorý vznikol vo Francúzsku ako jeu de paume (v preklade hra rúk, resp. hra s rukou/rukami)
+        považujúcou za predchodkyňu tenisu.Loptička sa odbíjala pôvodne holými rukami, neskôr sa už používali rukavice a nakoniec palice.
+        Rakety a prvý kurt vznikol v 16. storočí. V roku 1873 si major anglickej armády Walter Clopton Wingfield patentoval hru pod názvom spharistike
+        (odvodeného od gréckeho slova pre hru s loptičkami). Vedľajší názov pre túto hru bol lawn tenis (v preklade trávnikový tenis).
+        Z Anglicka sa hra rozšírila aj do USA, Austrálie a neskôr do Európy.</p>
         </header>
     </main>
 
      <article >
-    <h4 class="shadowing">PrincÃ­p hry</h4>
-    <b>Tenis</b> je loptovÃ¡ hra pre 2 alebo 4 hrÃ¡Äov. Variant s 2 hrÃ¡Ämi je dvojhra, variant so 4 hrÃ¡Ämi Å¡tvorhra.
-    Existuje klasickÃ¡ a zmieÅ¡anÃ¡ Å¡tvorhra, pri klasickej proti sebe hrajÃº dva pÃ¡ry muÅ¾ov alebo Å¾ien,
-    pri zmieÅ¡anej je v kaÅ¾dom pÃ¡re jeden muÅ¾ a jedna Å¾ena. SÃºperi stoja proti sebe na sieÅ¥ou rozdelenom hrÃ¡Äskom poli
-    (kurte) a pokÃºÅ¡ajÃº sa odraziÅ¥ tenisovÃº loptiÄku tenisovou raketou tak, aby sÃºperi neboli schopnÃ­ ju v rÃ¡mci pravidiel vrÃ¡tiÅ¥.
+    <h4 class="shadowing">Princíp hry</h4>
+    <b>Tenis</b> je loptová hra pre 2 alebo 4 hráčov. Variant s 2 hráčmi je dvojhra, variant so 4 hráčmi štvorhra.
+    Existuje klasická a zmiešaná štvorhra, pri klasickej proti sebe hrajú dva páry mužov alebo žien,
+    pri zmiešanej je v každom páre jeden muž a jedna žena. Súperi stoja proti sebe na sieťou rozdelenom hráčskom poli
+    (kurte) a pokúšajú sa odraziť tenisovú loptičku tenisovou raketou tak, aby súperi neboli schopní ju v rámci pravidiel vrátiť.
 
      </article>
-    <h4 class="shadowing">Miesta kde sa dÃ¡ hraÅ¥ v KoÅ¡iciach</h4>
+    <h4 class="shadowing">Miesta kde sa dá hrať v Košiciach</h4>
 
     <table >
 
         <tr>
-            <th>NÃ¡zov haly</th>
+            <th>Názov haly</th>
             <th>Miesto</th>
         </tr>
         <tr>
-            <td>Å portovÃ© centrum Cassosport</td>
-            <td> AlejovÃ¡ 1632/1</td>
+            <td>Športové centrum Cassosport</td>
+            <td> Alejová 1632/1</td>
         </tr>
 
         <tr>
-            <td>TenisovÃ© kurty AniÄka</td>
+            <td>Tenisové kurty Anička</td>
             <td> Kostolianska cesta 3424 </td>
         </tr>
 
         <tr>
             <td>Tenis komplex</td>
-            <td> WuppertÃ¡lska  </td>
+            <td> Wuppertálska  </td>
         </tr>
 
         <tr>
-            <td>TenisovÃ½ klub DRANaM </td>
-            <td> VysokoÅ¡kolskÃ¡ 39  </td>
+            <td>Tenisový klub DRANaM </td>
+            <td> Vysokoškolská 39  </td>
         </tr>
 
         <tr>
-            <td>TenisovÃ½ Kurt Jazero </td>
-            <td> JenisejskÃ¡ 2703/1E </td>
+            <td>Tenisový Kurt Jazero </td>
+            <td> Jenisejská 2703/1E </td>
         </tr>
 
         <tr>
-            <td>StolnotenisovÃ½ klub LokomotÃ­va </td>
-            <td> ÄermeÄ¾skÃ¡ cesta 1452  </td>
+            <td>Stolnotenisový klub Lokomotíva </td>
+            <td> Čermeľská cesta 1452  </td>
         </tr>
 
         <tr>
-            <td>GolfovÃ© ihrisko Alpinka </td>
-            <td> ÄermeÄ¾skÃ© Ãºdolie 3650  </td>
+            <td>Golfové ihrisko Alpinka </td>
+            <td> Čermeľské údolie 3650  </td>
         </tr>
 
     </table>
         <footer>
     <div class="infoother">
     <p class="sizeinfoother">
-        <b>VytvorenÃ©:</b>
+        <b>Vytvorené:</b>
         27.02.2020
     </p>
     <p>
         <b>Autor:</b>
-        <i>MolnÃ¡rovÃ¡ Anna</i> <br>
+        <i>Molnárová Anna</i> <br>
         <b>Kontakt:</b>
         anna.molnarova@student.tuke.sk
     </p>
