--- a/article1.html
+++ b/article1.html
@@ -15,59 +15,60 @@
         <ul class="navbar">
             <li><a href="articles.html" >Domov</a></li>
             <li><a class="active">Bedminton </a></li>
-            <li><a href="article%202.html">StolnÃ½ tenis</a></li>
+            <li><a href="article%202.html">Stolný tenis</a></li>
             <li><a href="article%203.html">Tenis</a></li>
-            <li style="float:right"><a class="logo">RaketovÃ© Å¡porty KoÅ¡ice</a></li>
+            <li><a href="Referencies.html">Referencie</a></li>
+            <li style="float:right"><a class="logo">Raketové športy Košice</a></li>
         </ul>
 
     <h1 class="header">Bedminton</h1>
     
     <img class="image" src="bad.jpg" height="147" alt="Kurt">
         
-    <p><b>Bedminton</b> patrÃ­ medzi najstarÅ¡ie Å¡porty na svete pochÃ¡dza zo 7. storoÄia kedy hra bola nazÃ½vanÃ¡ Di-Dschian-Dsi v ÄÃ­ne, Cibane  v Japonsku
-        a Tiye-Kitcha-Ki v KÃ³rei.</p>
+    <p><b>Bedminton</b> patrí medzi najstaršie športy na svete pochádza zo 7. storočia kedy hra bola nazývaná Di-Dschian-Dsi v Číne, Cibane  v Japonsku
+        a Tiye-Kitcha-Ki v Kórei.</p>
 
-    <b class="shadowing">Kto preslÃ¡vil bedminton</b>
+    <b class="shadowing">Kto preslávil bedminton</b>
         <ul>
-            <li>  britskÃ­ vojaci </li>
+            <li>  britskí vojaci </li>
             <li> Isaac Spratt </li>
-            <li> plukovnÃ­k Dolby </li>
+            <li> plukovník Dolby </li>
 
         </ul>
 
-    <h4 class="shadowing">PrincÃ­p hry</h4>
-    <b>Bedminton</b> je Å¡portovÃ¡ hra pre dvoch alebo Å¡tyroch hrÃ¡Äov, ktorÃ­ sa pohybujÃº na opaÄnÃ½ch poloviciach obdÄºÅ¾nikovÃ©ho ihriska rozdelenÃ©ho sieÅ¥ou.
-            HrÃ¡Äi v rukÃ¡ch drÅ¾ia rakety a striedavo odbÃ­jajÃº koÅ¡Ã­k.
+    <h4 class="shadowing">Princíp hry</h4>
+    <b>Bedminton</b> je športová hra pre dvoch alebo štyroch hráčov, ktorí sa pohybujú na opačných poloviciach obdĺžnikového ihriska rozdeleného sieťou.
+            Hráči v rukách držia rakety a striedavo odbíjajú košík.
 
-    <h4 class="shadowing">Miesta kde sa dÃ¡ hraÅ¥ v KoÅ¡iciach</h4>
+    <h4 class="shadowing">Miesta kde sa dá hrať v Košiciach</h4>
         <table class="table">
 
                 <tr>
-                    <th>NÃ¡zov haly</th>
+                    <th>Názov haly</th>
                     <th>Miesto</th>
                 </tr>
                 <tr>
-                    <td>Å portovÃ© centrum Cassosport</td>
-                    <td> AlejovÃ¡ 1632/1</td>
+                    <td>Športové centrum Cassosport</td>
+                    <td> Alejová 1632/1</td>
                 </tr>
 
             <tr>
-                <td>BasketbalovÃ¡ hala LokomotÃ­va</td>
-                <td> ÄermeÄ¾skÃ¡ 1 </td>
+                <td>Basketbalová hala Lokomotíva</td>
+                <td> Čermeľská 1 </td>
             </tr>
 
             <tr>
                 <td>Cassovia badminton spot</td>
-                <td> JuÅ¾nÃ© nÃ¡breÅ¾ie 13  </td>
+                <td> Južné nábrežie 13  </td>
             </tr>
 
             <tr>
                 <td>Forma Club </td>
-                <td> Å½riedÄ¾ovÃ¡ 11  </td>
+                <td> Žriedľová 11  </td>
             </tr>
 
             <tr>
-                <td>AMIGOS Å¡port centrum </td>
+                <td>AMIGOS šport centrum </td>
                 <td> Trieda KVP 1  </td>
             </tr>
 
@@ -75,12 +76,12 @@
         <footer>
         <div class="infoother">
             <p class="sizeinfoother">
-                <b>VytvorenÃ©:</b>
+                <b>Vytvorené:</b>
                 27.02.2020
             </p>
             <p>
                 <b>Autor:</b>
-                <i>MolnÃ¡rovÃ¡ Anna</i> <br>
+                <i>Molnárová Anna</i> <br>
                 <b>Kontakt:</b>
                 anna.molnarova@student.tuke.sk
 
