--- a/article 2.html
+++ b/article 2.html
@@ -17,6 +17,7 @@
             <li><a href="article1.html">Bedminton </a></li>
             <li><a class="active">StolnÃ½ Tenis </a></li>
             <li><a href="article%203.html">Tenis</a></li>
+            <li><a href="Referencies.html">Referencie</a></li>
             <li style="float:right"><a class="logo">RaketovÃ© Å¡porty KoÅ¡ice</a></li>
         </ul>
 
