--- a/article1.html
+++ b/article1.html
@@ -17,6 +17,7 @@
             <li><a class="active">Bedminton </a></li>
             <li><a href="article%202.html">StolnÃ½ tenis</a></li>
             <li><a href="article%203.html">Tenis</a></li>
+            <li><a href="Referencies.html">Referencie</a></li>
             <li style="float:right"><a class="logo">RaketovÃ© Å¡porty KoÅ¡ice</a></li>
         </ul>
 
